# Contacts-Explorer

./: AcceptanceTesting.cpp  AcceptanceTesting.hpp  CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/: details-0002.html  details-0004.html  details-0006.html  details-0015.html  details-0018.html  details-0019.html  details-0021.html  details-0022.html  details-0026.html  details-0027.html  details-0028.html  details-0030.html  details-0031.html  details-0033.html  details-0034.html  details-0035.html  details-0036.html  details-0037.html  details-0038.html  details-0039.html  details-0041.html  details-0043.html  details-0045.html  details-0046.html  details-0047.html  details-0050.html  details-0051.html  details-0053.html  details-0060.html  details-0061.html  details-0062.html  details-0063.html  details-0067.html  details-0070.html  details-0073.html  details-0075.html  details-0076.html  details-0078.html  details-0080.html  details-0082.html  (+426 more)
doctest_tests/: CMakeLists.txt  tests.cpp
html/: details-0001.html  details-0003.html  details-0005.html  details-0007.html  details-0008.html  details-0009.html  details-0010.html  (+529 more)
project_lib/: CMakeLists.txt  ContactRecord.cpp  ContactRecord.hpp  TextFileLoader.cpp  TextFileLoader.hpp  Website.cpp  Website.hpp  WebsiteSettings.cpp  WebsiteSettings.hpp
project_lib/Element/: Container.cpp  Container.hpp  Element.hpp  Heading.cpp  Heading.hpp  Hyperlink.cpp  Hyperlink.hpp  List.cpp  List.hpp  Table.cpp  Table.hpp
project_lib/Page/: DetailsPage.cpp  DetailsPage.hpp  IndexPage.cpp  IndexPage.hpp  Page.cpp  Page.hpp
(+139 files in other folders)
